infrastructure/twenty/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: twenty
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
    app.kubernetes.io/part-of: twenty
    app.kubernetes.io/component: storage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
  ports:
    - name: s3
      port: 9000
      targetPort: s3
      protocol: TCP
